--- a/application/home/view/usermanage/edit.html
+++ b/application/home/view/usermanage/edit.html
@@ -5,11 +5,11 @@
         <div class="col-md-1">
         </div>
         <div class="col-md-7">
-            <form class="form-horizontal" action="{:url('update')}" method="post">
+            <form class="form-horizontal" action="{:url('save')}" method="post">
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-2 control-label">用户名</label>
                     <div class="col-sm-10">
-                        <input type="email" class="form-control" id="inputEmail3" placeholder="Name">
+                        <input type="email" class="form-control" id="inputEmail3" placeholder="Name" value="{$User->username}">
                     </div>
                 </div>
                 <div class="form-group">
@@ -24,7 +24,7 @@
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-2 control-label">邮箱</label>
                     <div class="col-sm-10">
-                        <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+                        <input type="email" class="form-control" id="inputEmail3" placeholder="Email" value="{%User->email}">
                     </div>
                 </div>
                 <div class="form-group">
@@ -34,21 +34,17 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="inputEmail3" class="col-sm-2 control-label">状态</label>
-                    <div class="col-sm-10">
-                        <div class="btn-group">
-                            <button class="btn btn-default btn-sm dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                冻结 <span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu">
-                                解冻
-                            </ul>
-                        </div>
+                    <label for="status" class="col-md-2 control-label">状态:</label>
+                    <div class="col-md-10">
+                        <input id="dongjie" type="radio" name="status" value="0" />
+                        <label for="dongjie">&nbsp;冻结</label>&nbsp;
+                        <input id="jiedong" type="radio" name="status" value="1" />
+                        <label for="jiedong">&nbsp;女</label>
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn btn-default btn btn-primary"><i class="glyphicon glyphicon-plus"></i>&nbsp;保存</button>
+                        <button type="submit" class="btn btn-default btn btn-primary"><i class="glyphicon glyphicon-ok"></i>&nbsp;保存</button>
                     </div>
                 </div>
             </form>
