--- a/application/home/view/Article/edit.html
+++ b/application/home/view/Article/edit.html
@@ -1,43 +1,94 @@
-{extend name="index" /}
-{block name="body"}
+{extend name="index" /} {block name="body"}
 <div class="container">
     <div class="row">
         <div class="col-md-1">
         </div>
         <div class="col-md-7">
-            <form class="form-horizontal" action="{:url('insert')}" method="post">
+            <form class="form-horizontal" action="{:url('update')}" method="post">
+            <input type="hidden" name="id" value="{$Article->id}"/>
                 <div class="form-group">
-                    <label for="inputEmail3" class="col-sm-2 control-label">文章管理</label>
+                    <label for="inputEmail3" class="col-sm-2 control-label">类别</label>
                     <div class="col-sm-10">
-                        <select class="form-control">
-                            <foreach name="" item="module">
-                                <option value="">新闻通知</option>
-                                <option value="">产品列表</option>
-                                <option value="">关于我们</option>
-                            </foreach>
+                        <select class="form-control" name="category_id">
+                            
+                                {volist name="Categorys" id="Category"}
+                                <option value="{$Category->id}" {eq name="$Category->id" value="$Article->category_id"} selected="selected" {/else} selected=""{/eq}>{$Category->name}</option>
+                                {/volist}
+                        
                         </select>
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-2 control-label">名称</label>
                     <div class="col-sm-10">
-                        <input type="email" class="form-control" id="inputEmail3" placeholder="名称">
+                        <input type="text" class="form-control" id="inputEmail3" name="title" value="{$Article->title}" />
                     </div>
                 </div>
-
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-2 control-label">内容</label>
                     <div class="col-sm-10">
-                        <input type="email" class="form-control" id="inputEmail3" placeholder="内容">
+                        <input type="text" class="form-control" id="inputEmail3" placeholder="内容" name="body" value="{$Article->body}" />
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="sex" class="col-sm-2 control-label">推荐</label>
+                    <label for="is_recomment" class="col-sm-2 control-label">推荐</label>
                     <div class="col-sm-10">
-                        <input id="man" type="radio" name="sex" value="0" />
+                        <input id="man" type="radio" name="is_recomment" value="1"
+                        <?php 
+                        if($Article->getData('is_recomment') === 1)
+                        {
+                            
+                            echo 'checked="true"';
+                        }
+                        ?>
+                        />
                         <label for="man">&nbsp;是</label>&nbsp;
-                        <input id="woman" type="radio" name="sex" value="1" />
+                        <input id="woman" type="radio" name="is_recomment" value="0" 
+                        <?php 
+                        if($Article->getData('is_recomment') === 0)
+                        {
+                            
+                            echo 'checked="true"';
+
+                        }
+                        ?> />
                         <label for="woman">&nbsp;否</label>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="is_top" class="col-sm-2 control-label">置顶</label>
+                    <div class="col-sm-10">
+                        <?php 
+                        $select3 = false;
+                        $select4 = false;
+                        if($Article->getData('is_top') === 1)
+                        {
+                           $select3 = true;
+                        }else
+                        {
+                           $select4 = true;
+                        }?>
+                        <input id="ma" type="radio" name="is_top" value="1" 
+                        <?php 
+                        if($Article->getData('is_top') === 1)
+                        {
+                            
+                            echo 'checked="true"';
+                        }
+                        ?>
+                        "/>
+                        <label for="ma">&nbsp;是</label>&nbsp;
+                        <input id="woma" type="radio" name="is_top" value="0" 
+                        <?php 
+                        if($Article->getData('is_top') === 0)
+                        {
+                            
+                            echo 'checked="true"';
+
+                        }
+                        ?>
+                         />
+                        <label for="woma">&nbsp;否</label>
                     </div>
                 </div>
                 <div class="form-group">
