--- a/application/home/view/Article/index.html
+++ b/application/home/view/Article/index.html
@@ -8,7 +8,7 @@
                 <div class="row">
                     <div class="col-md-3">
                         <div class="input-group custom-search-form">
-                            <input class="form-control" name="" placeholder="标题..." type="text" value="" />
+                            <input class="form-control" name="title" placeholder="标题..." type="text" value="{:input('post.title')}" />
                             <span class="input-group-btn">
                                 <button class="btn btn-default" type="submit">
                                     <i class="fa fa-search"></i>
@@ -19,7 +19,7 @@
                     <div class="col-md-2">
                     </div>
                     <div class="col-md-2 col-md-offset-5">
-                        <div class="col-md-2"><a href="{:url('Article/edit')}" class="btn btn-primary" style="margin-left: 40px;
+                        <div class="col-md-2"><a href="{:url('add')}" class="btn btn-primary" style="margin-left: 40px;
 "><i class="glyphicon glyphicon-plus"></i>&nbsp;增加</a></div>
                     </div>
                 </div>
@@ -37,42 +37,27 @@
                                 <th>标题</th>
                                 <th>类别</th>
                                 <th>推荐</th>
+                                <th>置顶</th>
                                 <th>操作</th>
                             </tr>
                         </thead>
                         <tbody>
+                        {volist name="Articles" id="Article" key="key"}
                              <tr>
-                                <td>1</td>
-                                <td>企鹅回来了</td>
-                                <td>新闻通知</td>
-                                <td>是</td>
+                                <td>{$key}</td>
+                                <td>{$Article->title}</td>
+                                <td>{$Article->category->name}</td>
+                                <td>{$Article->is_recomment}</td>
+                                <td>{$Article->is_top}</td>
                                 <td>
-                                    <a class="btn btn-md btn-primary" href="{:url('Article/edit')}"><i class="fa fa-pencil"></i> 编辑</a>
-                                    <a class="btn btn-md btn-danger" href="{:url('delete')}"><i class="fa fa-trash-o "></i> 删除</a>
+                                    <a class="btn btn-md btn-primary" href="{:url('edit?id='.$Article->id)}"><i class="fa fa-pencil"></i> 编辑</a>
+                                    <a class="btn btn-md btn-danger" href="{:url('delete?id='.$Article->id)}"><i class="fa fa-trash-o "></i> 删除</a>
                                 </td>
                             </tr>
-                            <tr>
-                                <td>2</td>
-                                <td>南极大陆</td>
-                                <td>产品列表</td>
-                                <td>否</td>
-                                <td>
-                                    <a class="btn btn-md btn-primary" href="{:url('Article/edit')}"><i class="fa fa-pencil"></i> 编辑</a>
-                                    <a class="btn btn-md btn-danger" href="{:url('delete')}"><i class="fa fa-trash-o "></i> 删除</a>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>3</td>
-                                <td>厉害啊</td>
-                                <td>关于我们</td>
-                                <td>是</td>
-                                <td>
-                                    <a class="btn btn-md btn-primary" href="{:url('Article/edit')}"><i class="fa fa-pencil"></i> 编辑</a>
-                                    <a class="btn btn-md btn-danger" href="{:url('delete')}"><i class="fa fa-trash-o "></i> 删除</a>
-                                </td>
-                            </tr>
+                        {/volist}
                         </tbody>
                     </table>
+                    {$Articles->render()}
                 </div>
                 <nav>
                     <Yunzhi:page totalcount="totalCount" />
