--- a/application/home/view/Category/index.html
+++ b/application/home/view/Category/index.html
@@ -11,7 +11,7 @@
                             <form class="form-inline" action="{:url('',input('get.'))}">
                                 <div class="form-group">
                                     <label class="sr-only" for="name"></label>
-                                    <input name="name" type="text" class="form-control" placeholder="类别名..." value="{:input('get.name')}">
+                                    <input name="name" type="text" class="form-control" placeholder="类别名..." value="{:input('get.name')}" />
                                     <button type="submit" class="btn btn-default"><i class="glyphicon glyphicon-search"></i>&nbsp;查询</button>
                                 </div>
                             </form>
