--- a/application/home/view/User/edit.html
+++ b/application/home/view/User/edit.html
@@ -9,25 +9,32 @@
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-2 control-label">用户名</label>
                     <div class="col-sm-10">
-                        <input type="email" class="form-control" id="inputEmail3" placeholder="Name" value="">
+                        <input type="text" class="form-control" id="inputEmail3" value="{$User->username}" name="username">
+                        <input type="hidden" name="id" value="{$User->id}">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-2 control-label">姓名</label>
                     <div class="col-sm-10">
-                        <input type="email" class="form-control" id="inputEmail3" placeholder="Name">
+                        <input type="text" class="form-control" id="inputEmail3" value="{$User->name}" name="name">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-2 control-label">邮箱</label>
                     <div class="col-sm-10">
-                        <input type="email" class="form-control" id="inputEmail3" placeholder="Email" value="">
+                        <input type="email" class="form-control" id="inputEmail3" value="{$User->email}" name="email">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="inputPassword3" class="col-sm-2 control-label">密码</label>
                     <div class="col-sm-10">
-                        <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+                        <input type="password" class="form-control" id="inputPassword3" value="{$User->password}" name="password">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="inputPassword3" class="col-sm-2 control-label">确认密码</label>
+                    <div class="col-sm-10">
+                        <input type="password" class="form-control" id="inputPassword3" value="{$User->password}" name="newpassword">
                     </div>
                 </div>
                 <div class="form-group">
