--- a/application/home/view/User/index.html
+++ b/application/home/view/User/index.html
@@ -41,10 +41,10 @@
                     {volist name="Users" id="User" key="key"}
                     <tr>
                         <td>{$key}</td>
-                        <td><a href="{:url('detail?id=' .$User->id)}">{$User->username}</a></td>
+                        <td>{$User->username}</td>
                         <td><a href="{:url('detail?id=' .$User->id)}">{$User->name}</a></td>
                         <td>{$User->email}</td>
-                        <td><a href="{:url('delete?id=' .$User->getData('id'))}" class="btn btn-md btn-danger"><i class="fa fa-trash-o "></i>删除</a>
+                        <td><a href="{:url('delete?id=' .$User->id)}" class="btn btn-md btn-danger"><i class="fa fa-trash-o "></i>删除</a>
                             <a href="{:url('edit?id=' .$User->id)}" class="btn btn-md btn-primary"><i class="fa fa-pencil"></i>编辑</a></td>
                     </tr>
                     {/volist}
