--- a/application/index/view/nav.html
+++ b/application/index/view/nav.html
@@ -6,8 +6,16 @@
 <nav>
     <div class="row container_12">
         <div class="col-md-6">
-            <ul class="sf-menu">
-                <li class="current"><a href="{:url('Index/index')}">首页</a></li>
+        <ul class="sf-menu">
+        <?php
+            $Menu = new \app\model\Menu;
+            $Menus = $Menu->get(['is_permission' => '0'])->select();
+        ?>
+        {volist name="Menus" id ="Menu"}
+            <li><a href="{:url($Menu->url)}">{$Menu->name}</a></li>
+        {/volist}
+        
+<!--                 <li class="current"><a href="{:url('Index/index')}">首页</a></li>
                 <li
                 <?php 
                 if(session('style')==null)
@@ -20,7 +28,7 @@
 
                 ><a href="{:url('Newsinform/index')}">新闻通知</a></li>
                 <li><a href="{:url('Productlist/index')}">产品列表</a></li>
-                <li style="margin-right: 180px;"><a href="{:url('Aboutus/index')}">关于我们</a></li>
+                <li style="margin-right: 180px;"><a href="{:url('Aboutus/index')}">关于我们</a></li> -->
                 <li><a href="{:url('Login/index')}">登录</a></li>
                 <li><a href="{:url('Login/logout')}">退出</a></li>
             </ul>
