--- a/application/index/view/nav.html
+++ b/application/index/view/nav.html
@@ -1,6 +1,9 @@
 <div class="container_12">
     <div class="grid_12">
-        <h1><a href="index.html"><img src="/thinkphp_5.0CMS/public/index/images/logo.png" alt="BIZZ"></a></h1>
+        <h1><a href="index.html"><img src="{$Systemset->url}" width="80px" height="60px"></a></h1>
+        <center>
+            <p>{$Systemset->name}</p>
+        </center>
     </div>
 </div>
 <nav>
