--- a/application/index/view/Subpage/index.html
+++ b/application/index/view/Subpage/index.html
@@ -8,7 +8,7 @@
                 <ul>
                     {volist name="Articles" id="Article"}
                     <div class="grid_12">
-                        <img src="">
+                        <img src="{$Article->getArticleContent($Article->id)->url}" width="100" height="60" style="margin-bottom:10px">
                         <a href="{:url('detail?id=' . $Article->id)}">{$Article->title}</a> 
                         <span>[ {$Article->create_time} ]</span>
                     </div>
