--- a/application/index/view/newsinform/detail.html
+++ b/application/index/view/newsinform/detail.html
@@ -6,6 +6,8 @@
         <div class="container_12">
 
             <div class="grid_12" style="background:#D8D8D8;">
+            <div style="text-align:center;"> <img src="{$News->getArticleContent($News->id)->url}" alt="产品" title="图片" width="600" height="400">
+            </div>
                 <div>
                     <h2 style="text-align:center;padding-bottom: 40px;
 padding-top: 40px;}">{$News->title}</h2></div>
