--- a/application/index/view/productlist/detail.html
+++ b/application/index/view/productlist/detail.html
@@ -7,7 +7,7 @@
         <div class="container_12">
             <div class="grid_12" style="background:#D8D8D8;">
                 <br />
-                <div style="text-align:center;"> <img src="/thinkphp_5.0CMS/public/img/ben.png" alt="产品" title="图片"></div>
+                <div style="text-align:center;"> <img src="{$News->getArticleContent($News->id)->url}" alt="产品" title="图片"></div>
                 <div>
                     <h2 style="text-align:center;padding-bottom: 40px;
 padding-top: 40px;}">{$News->title}</h2></div>
