--- a/application/home/view/systemset/edit.html
+++ b/application/home/view/systemset/edit.html
@@ -17,9 +17,9 @@
                     <label for="show" class="col-md-2 control-label">公司名称是否显示</label>
                     <div class="col-md-10">
                         <input id="man" type="radio" name="is_show" {eq name="$Systemset->getData('is_show')" value="0" } checked="checked" {/eq} value="0" />
-                        <label for="man">&nbsp;是</label>&nbsp;
+                        <label for="man">&nbsp;否</label>&nbsp;
                         <input id="woman" type="radio" name="is_show" {eq name="$Systemset->getData('is_show')" value="1" } checked="checked" {/eq}  value="1" />
-                        <label for="woman">&nbsp;否</label>
+                        <label for="woman">&nbsp;是</label>
                     </div>
                 </div>
                 <div class="form-group">
@@ -32,9 +32,9 @@
                     <label for="is_display" class="col-md-2 control-label">页脚名称是否显示</label>
                     <div class="col-md-10">
                         <input id="man" type="radio" name="is_display" {eq name="$Systemset->getData('is_display')" value="0" } checked="checked" {/eq} value="0" />
-                        <label for="man">&nbsp;是</label>&nbsp;
+                        <label for="man">&nbsp;否</label>&nbsp;
                         <input id="woman" type="radio" name="is_display" {eq name="$Systemset->getData('is_display')" value="1" } checked="checked" {/eq} value="1" />
-                        <label for="woman">&nbsp;否</label>
+                        <label for="woman">&nbsp;是</label>
                     </div>
                 </div>
                 <div class="form-group">
