--- a/application/index/view/newsinform/index.html
+++ b/application/index/view/newsinform/index.html
@@ -11,17 +11,15 @@
                         <a href="{:url('Subpage/index')}" class="btn">MORE</a>
                     </div>
                     <div class="wrap box-2 border-1">
-                        <ul>
                         {volist name="News" id="New"}
-                            <li>
+                            <h6 style="margin-top:0px">
                                 <a href="{:url('detail?id=' . $New->id)}" title="{$New->title}" target="_blank"><?php
                                 echo mb_substr($New->title, 0, 10, 'utf-8');
                                 ?>...                            
                                 </a>
                                 <span>[{$New->create_time}]</span>
-                            </li>
+                            </h6>
                         {/volist}
-                        </ul>
                         <br>
                     </div>
                 </div>
