--- a/application/home/view/Article/add.html
+++ b/application/home/view/Article/add.html
@@ -52,6 +52,15 @@
                     </div>
                 </div>
                 <div class="form-group">
+                    <label for="is_top" class="col-sm-2 control-label">SliderShow</label>
+                    <div class="col-sm-10">
+                        <input id="ma" type="radio" name="is_slidershow" value="1" />
+                        <label for="ma">&nbsp;是</label>&nbsp;
+                        <input id="woma" type="radio" name="is_slidershow" value="0" />
+                        <label for="woma">&nbsp;否</label>
+                    </div>
+                </div>
+                <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
                         <button type="submit" class="btn btn-primary">保存</button>
                     </div>
