--- a/application/home/view/Article/edit.html
+++ b/application/home/view/Article/edit.html
@@ -98,6 +98,31 @@
                     </div>
                 </div>
                 <div class="form-group">
+                    <label for="is_recomment" class="col-sm-2 control-label">SliderShow</label>
+                    <div class="col-sm-10">
+                        <input id="man" type="radio" name="is_slidershow" value="1"
+                        <?php 
+                        if($Article->getData('is_slidershow') === 1)
+                        {
+                            
+                            echo 'checked="true"';
+                        }
+                        ?>
+                        />
+                        <label for="man">&nbsp;是</label>&nbsp;
+                        <input id="woman" type="radio" name="is_slidershow" value="0" 
+                        <?php 
+                        if($Article->getData('is_slidershow') === 0)
+                        {
+                            
+                            echo 'checked="true"';
+
+                        }
+                        ?> />
+                        <label for="woman">&nbsp;否</label>
+                    </div>
+                </div>
+                <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
                         <button type="submit" class="btn btn-primary">保存</button>
                     </div>
