--- a/application/home/view/Article/index.html
+++ b/application/home/view/Article/index.html
@@ -38,6 +38,7 @@
                                 <th>类别</th>
                                 <th>推荐</th>
                                 <th>置顶</th>
+                                <th>SliderShow</th>
                                 <th>操作</th>
                             </tr>
                         </thead>
@@ -49,6 +50,7 @@
                                 <td>{$Article->category->name}</td>
                                 <td>{$Article->is_recomment}</td>
                                 <td>{$Article->is_top}</td>
+                                <td>{$Article->is_slidershow}</td>
                                 <td>
                                     <a class="btn btn-md btn-primary" href="{:url('edit?id='.$Article->id)}"><i class="fa fa-pencil"></i> 编辑</a>
                                     <a class="btn btn-md btn-danger" href="{:url('delete?id='.$Article->id)}"><i class="fa fa-trash-o "></i> 删除</a>
