--- a/application/index/view/nav.html
+++ b/application/index/view/nav.html
@@ -12,7 +12,15 @@
         <ul class="sf-menu">
         <?php
             $Menu = new \app\model\Menu;
-            $Menus = $Menu->get(['is_permission' => '0'])->select();
+            if(session('usermanageId') === null)
+            {
+               $Menus = $Menu->where(['status' => '1','is_permission' => '0'])->select();
+             
+            }else{
+                $Menus = $Menu->where(['status' => '1','is_permission' => '1'])->select();
+           
+            }
+           
         ?>
         {volist name="Menus" id ="Menu"}
             <li><a href="{:url($Menu->url)}">{$Menu->name}</a></li>
