--- a/application/home/view/personal/index.html
+++ b/application/home/view/personal/index.html
@@ -15,7 +15,7 @@
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-2 control-label">用户名</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="inputEmail3" placeholder="Username" value="{$User->username}" name="username">
+                        <input type="text" class="form-control" id="inputEmail3" placeholder="Username" value="{$User->username}" name="username" disabled="disabled">
                     </div>
                 </div>
                 <div class="form-group">
@@ -27,25 +27,25 @@
                 <div class="form-group">
                     <label for="inputPassword3" class="col-sm-2 control-label">密码</label>
                     <div class="col-sm-10">
-                        <input type="password" class="form-control" id="inputPassword3" placeholder="Password"  value="{$User->password}" name="password">
+                        <input type="password" class="form-control" id="inputPassword3" placeholder="Password"  name="password">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="inputPassword3" class="col-sm-2 control-label">新密码</label>
                     <div class="col-sm-10">
-                        <input type="password" class="form-control" id="inputPassword3" placeholder="Password" value="{$User->password}" name="newpassword">
+                        <input type="password" class="form-control" id="inputPassword3" placeholder="NewPassword"  name="newpassword">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="inputPassword3" class="col-sm-2 control-label">确认密码</label>
                     <div class="col-sm-10">
-                        <input type="password" class="form-control" id="inputPassword3" placeholder="Password" value="{$User->password}" name="repassword">
+                        <input type="password" class="form-control" id="inputPassword3" placeholder="NewPassword"  name="repassword">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-2 control-label">上次登录</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="inputEmail3" placeholder="LastTimeOn" name="lasttimeon" value="{$User->last_time_on}">
+                        <input type="text" class="form-control" id="inputEmail3" placeholder="LastTimeOn" name="lasttimeon" value="{$User->last_time_on}" disabled="disabled">
                     </div>
                 </div>
                 <div class="form-group">
