--- a/application/index/view/nav.html
+++ b/application/index/view/nav.html
@@ -1,8 +1,8 @@
 <div class="container_12">
     <div class="grid_12">
-        <h1><a href="index.html"><img src="{$Systemsetsss}" width="80px" height="60px"></a></h1>
+        <h1><a href="index.html"><img src="{$url}" width="80px" height="60px"></a></h1>
         <center>
-            <p>{$Systemsets}</p>
+            <p>{$header}</p>
         </center>
     </div>
 </div>
