--- a/application/home/view/Article/add.html
+++ b/application/home/view/Article/add.html
@@ -4,7 +4,7 @@
         <div class="col-md-1">
         </div>
         <div class="col-md-7">
-            <form enctype="multipart/form-data" class="form-horizontal" action="{:url('insert')}" method="post">
+            <form enctype="multipart/form-data" class="form-horizontal" action="{:url('update')}" method="post">
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-2 control-label">类别</label>
                     <div class="col-sm-10">
