--- a/application/home/view/Category/add.html
+++ b/application/home/view/Category/add.html
@@ -5,7 +5,7 @@
         <div class="col-md-1">
         </div>
         <div class="col-md-7">
-            <form class="form-horizontal" action="{:url('insert')}" method="post">
+            <form class="form-horizontal" action="{:url('update')}" method="post">
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-2 control-label">名称</label>
                     <div class="col-sm-10">
