--- a/application/home/view/personal/index.html
+++ b/application/home/view/personal/index.html
@@ -15,7 +15,7 @@
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-2 control-label">用户名</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="inputEmail3" placeholder="Username" value="{$User->username}" name="username" disabled="disabled">
+                        <input type="text" class="form-control" id="inputEmail3" placeholder="Username" value="{$User->getData('username')}" name="username"/>
                     </div>
                 </div>
                 <div class="form-group">
